<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="top|center_horizontal"
    android:background="#D3BEBE"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_test_1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/continueBtn"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/continue_button"
        android:fontFamily="@font/robotomono_wght"
        android:textSize="28sp"
        android:background="@drawable/bg_btn"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/newGame"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/new_game"
        android:fontFamily="@font/robotomono_wght"
        android:textSize="28sp"
        android:background="@drawable/bg_btn"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/infoBtn"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="50dp"
        android:text="@string/challenge"
        android:textSize="28sp"
        android:fontFamily="@font/robotomono_wght"
        android:background="@drawable/bg_btn"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="10dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitBtn"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_marginHorizontal="50dp"
        android:fontFamily="@font/robotomono_wght"
        android:text="@string/exit"
        android:textSize="28sp"
        android:background="@drawable/bg_btn"/>




</androidx.appcompat.widget.LinearLayoutCompat>