<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3BEBE"
    tools:context=".FinishActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/finish_button_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_back" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/test_finish"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="56dp"
                android:layout_height="match_parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/gold_win" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/skip_count"
                    android:fontFamily="@font/robotomono_wght"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_skip_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/skip_answer"
                    android:textSize="22sp"
                    android:fontFamily="@font/robotomono_wght"
                    android:textStyle="bold"
                    tools:text="Skip count" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/correct_count"
                    android:fontFamily="@font/robotomono_wght"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_correct_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/correct_answer"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/robotomono_wght"
                    tools:text="Correct count" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/wrong_count"
                    android:fontFamily="@font/robotomono_wght"
                    android:textSize="22sp" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_wrong_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/wrong_answer"
                    android:textSize="22sp"
                    android:fontFamily="@font/robotomono_wght"
                    android:textStyle="bold"
                    tools:text="Wrong count" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="100dp"
                android:orientation="vertical">


            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>