<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#D3BEBE"
    tools:context=".GameActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/buttonBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="?android:selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:src="@drawable/ic_back"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/my_test"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:gravity="center"/>

            <Space
                android:layout_width="56dp"
                android:layout_height="match_parent"/>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="8dp"
                android:layout_margin="16dp"
                app:cardBackgroundColor="@color/white">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textCurrentPosition"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        tools:text="1/3"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textQuestion"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        android:fontFamily="@font/robotomono_wght"
                        android:text="@string/test"
                        />


                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="“Alpamıs” dastanında Alpamısqa"
                            android:textSize="16sp"
                            android:fontFamily="@font/robotomono_wght"
                            android:textColor="@color/black"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>


                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text2"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="“Alpamıs” dastanında Alpamısqa"
                            android:textSize="16sp"
                            android:fontFamily="@font/robotomono_wght"
                            android:textColor="@color/black"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <RadioButton
                        android:id="@+id/radio3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text3"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="“Alpamıs” dastanında Alpamısqa"
                            android:textSize="16sp"
                            android:fontFamily="@font/robotomono_wght"
                            android:textColor="@color/black"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>

                </androidx.appcompat.widget.LinearLayoutCompat>


            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="8dp">
                    <RadioButton
                        android:id="@+id/radio4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center">
                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/text4"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="“Alpamıs” dastanında Alpamısqa"
                            android:textSize="16sp"
                            android:fontFamily="@font/robotomono_wght"
                            android:textColor="@color/black"/>

                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.cardview.widget.CardView>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:layout_margin="16dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonSkip"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:background="@drawable/ic_flat"
                    android:text="@string/skip"/>

                <Space
                    android:layout_width="16dp"
                    android:layout_height="match_parent"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/buttonNext"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:textAllCaps="false"
                    android:background="@drawable/ic_action"
                    android:text="@string/next"
                    android:textColor="@color/white"
                    android:enabled="false"/>

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>



</androidx.appcompat.widget.LinearLayoutCompat>